--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-          <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Mukta" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        font-family: 'Montserrat',sans-serif;
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Сайт</title>
