--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        font-family: 'Montserrat',sans-serif;
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:600" rel="stylesheet">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Сайт</title>
