--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             
             <article class="link">
                 <h2>Разработчик</h2>
-                <b> <a href="https://instagram.com/verhomiyy?igshid=o4mxo67qd8pa" class="bt" target="_blank">
+                <b> <a href="https://instagram.com/abandd0ned?igshid=p07ogupk4t5x" class="bt" target="_blank">
   Instagram Разработчика
 </a> </b>
             </article>
