--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <article class="content">
             <h2>Больше о нем</h2>
           Парню 15 лет, но он уже в свои года зарабатывает 60-80 тысяч рублей в месяц на пару со своим другом по прозвище Cum. Но это ещё не самое страшное до нас дошли слухи что у этих парней есть связь с печально известным Артуром или как его ещё называют Кам'янецким. 
-Проживает Александр в Украине, но где конкретно, информацию нельзя рассматривать. Это все что нам удалось узнать личного о нем.
+Проживает Александр в Украине, но где конкретно, информацию нельзя оглашать. Это все что нам удалось узнать личного о нем.
         </article>
         
         <article class="content">
