--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
         <article class="content">
             <h2>Что он именно наделал и откуда мы о нём знаем?</h2>
-            Его  "работа" заключается в том что они с его другом сайты, приложения при открытии которых все ваши персональные данные переходят им и дальше они делают с ними что хотят, но в 90% случаев они просто воруют деньги с банковских и электронных кошельков. Но Александру этого было не достаточно и он начал сливать интимные фото жертв таким образом в сеть попало более 200 позорных фото жертв.
+            Его  "работа" заключается в том что они с его другом делают сайты при открытии которых все ваши персональные данные переходят им и дальше они делают с ними что хотят, но в 90% случаев они просто воруют деньги с банковских и электронных кошельков. Но Александру этого было не достаточно и он начал сливать интимные фото жертв таким образом в сеть попало более 200 позорных фото жертв.
 
 Назревает ещё один вопрос откуда мы о нём знаем, всё просто он засветился в Российской кибер полиции именно в тот момент мы о его примерном месте проживания.
 
