--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         
         <article class="content">
             <h2>Что он именно наделал и откуда мы о нём знаем?</h2>
-            Его  "работа" заключается в том что они с его другом делают сайты при открытии которых все ваши персональные данные переходят им и дальше они делают с ними что хотят, но в 90% случаев они просто воруют деньги с банковских и электронных кошельков. Но Александру этого было не достаточно и он начал сливать интимные фото жертв таким образом в сеть попало более 200 позорных фото жертв.
-
-Назревает ещё один вопрос откуда мы о нём знаем, всё просто он засветился в Российской кибер полиции именно в тот момент мы о его примерном месте проживания.
-
-Также мы можем предоставить вам сыллку на его Instagram, но переходите на его Instagram страницу на свой страх и риск.
+            Его  "работа" заключается в том что они с его другом сайты, приложения при открытии которых все ваши персональные данные переходят им и дальше они делают с ними что хотят, но в 90% случаев они просто воруют деньги с банковских и электронных кошельков. Но Александру этого было не достаточно и он начал сливать интимные фото жертв таким образом в сеть попало более 200 позорных фото жертв.
+<p>
+Назревает ещё один вопрос откуда мы о нём знаем, всё просто он засветился в Российской кибер полиции именно в тот момент мы узнали его примерное место проживания.</p>
+<p>
+Также мы можем предоставить вам сыллку на его Instagram, но переходите на его Instagram страницу на свой страх и риск.</p>
         </article>
         
         <article class="content">
