--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         
         <div class="head__img">
-          <img class="photo__head" src="img/Logo_icon.png" alt="" />
+          <img class="photo__head" src="Logo_icon.png" alt="" />
         </div> <!--head__img-->
       </div> <!--head-->
     </div> <!--container-->
@@ -56,7 +56,7 @@
         <div class="section__box">
           
           <div class="section__img">
-            <img class="sheet" src="img/Photo.png" alt="" />
+            <img class="sheet" src="Photo.png" alt="" />
           </div>
           <div class="section__text">
           <a href="story1.html"> <h2 class="section__title">Александр</h2> </a>
