--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   
-  <title>name</title>
+  <title>Ями</title>
   
 </head>
 
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="intro">
         <div class="logo">
-          <h1 class="logo__text">HikiMori</h1>
+          <h1 class="logo__text">Ями</h1>
         </div> <!--logo-->
       </div> <!--intro-->
       
