--- a/story1.html
+++ b/story1.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>HikiMori</title>
+        <title>Ями</title>
         
         <link rel="stylesheet" href="style1.css">
         
