--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   
 <head>
-  <meta charset="UTF-8">
+  <meta content="text/html; charset=utf-8 http-equiv="Content-Type"/>
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
@@ -41,9 +41,9 @@
     <div class="container">
       <div class="link">
         
-        <a class="link__text" href="#" >Lorem</a>
-        <a class="link__text" href="#">Lorem</a>
-        <a class="link__text" href="#">Lorem</a>
+        <a class="link__text" href="#">Вкладка</a>
+        <a class="link__text" href="#">Вкладка</a>
+        <a class="link__text" href="#">Вкладка</a>
         
       </div> <!--link-->
     </div> <!--container-->
