--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <div class="section__box">
           
           <div class="section__img">
-            <img class="sheet" src="https://raw.githubusercontent.com/2hikimori/2hikimori.github.io/main/Photo.png" alt="" />
+            <img class="sheet" src="https://github.com/2hikimori/2hikimori.github.io/blob/main/yamura_anime-ava.jpg?raw=true" alt="" />
           </div>
           <div class="section__text">
-          <a href="story1.html"> <h2 class="section__title">Александр</h2> </a>
+          <a href="story1.html"> <h2 class="section__title">yamura_anime</h2> </a>
           </div>
         </div>
       
