--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     Типа название <b>«Тавка гей»</b>
-    <video width="400" height="300" controls="controls">
-        <sourse src="https://youtu.be/8aYyIRiFex0">
+    <video width="400" height="300" controls="controls" poster="IMG_20220819_031137_231.jpg">
+        <sourse src="VID_20220509_225318_823.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
     </video>
 </body>
 </html>
