--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 <body>
     Типа название <b>«Тавка гей»</b>
     <iframe width="932" height="524" src="https://www.youtube.com/embed/4dylEyreN00" title="Аниме попаданец все серии" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <video width="400" height="300" autoplay controls="controls" poster=img.jpg">
+        <sourse src="VID_20220509_225318_823.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
