--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </section>
     
     <section>    <!-- Видео -->
-        <video id="video" controls="controls" poster="https://gen.jut.su/uploads/preview/861/0/0/7_1661114047.jpg"></iframe>
-            <source src="https://r290201.kujo-jotaro.com/ayumu-shougi/7.720.fc83910082db15df.mp4?hash=226d080876142532a046a0751f6eb4ca&amp;hash2=e1dcd81c429ccfb962697b4b5d4201eb" type="video/mp4">
+        <video id="video" controls="controls" poster="https://gen.jut.su/uploads/preview/852/0/0/8_1661365567.jpg">
+            <source src="https://r22005.kujo-jotaro.com/lycoreco/8.720.6a4b357dd89b6487.mp4?hash=a1e94ac067ce8bbc1856519a06b33bb7&amp;hash2=dd36fb79694501416b202f18e7893491" type="video/mp4">
         </video>
     </section>
 </body>
